app/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tierlist-api-deployment
  namespace: tierlist-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tierlist-api
  template:
    metadata:
      labels:
        app: tierlist-api
      annotations:
    spec:
      serviceAccountName: internal-app
      containers:
        - name: tierlist-api
          image: duk9741/tierlist-api:26
          ports:
            - containerPort: 8080
