app/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tierlist-api-service
  namespace: tierlist-api
spec:
  selector:
    app: tierlist-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
