app/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tierlist-api-ingress
  namespace: tierlist-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: api.tierlist.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tierlist-api-service
            port:
             number: 80
  tls:
    - hosts:
      - api.tierlist.site
      secretName: tierlist-api-cert
